--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100&display=swap');
+
 .nav-mb {
   position: fixed;
   top: 0;
@@ -6,17 +8,17 @@
 
 .a-tag {
   text-decoration: none;
-  color: #1e1e23;
+  color: rgb(209, 209, 209);
   opacity: 1;
-  font-family: "work sans", sans serif;
-  font-size: 1.6em;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4em;
   font-weight: 400;
   transition: 200ms;
 }
 
 .a-tag:hover {
   opacity: 0.5;
-  color: #512e7f;
+  color: #6739a3;
   text-decoration: none;
 }
 
@@ -24,14 +26,6 @@ nav ul {
   text-align: center;
   padding: 0;
   list-style-type: none;
-}
-
-.content {
-  border: 1px solid #36383f;
-  border-radius: 20px;
-  width: 100%;
-  height: 91%;
-  background-color: #f5f6fa;
 }
 
 nav {
@@ -42,12 +36,11 @@ nav {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: 25px;
-  left: 25px;
+  top: 15px;
+  left: 15px;
   z-index: 15 !important;
   -webkit-user-select: none;
   user-select: none;
-  background: white;
   border-radius: 50%;
   padding: 20px;
 }
@@ -68,13 +61,12 @@ nav {
   height: 3px;
   margin-bottom: 5px;
   position: relative;
-  background: black;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 5px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
     background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  background: black;
+  background: white;
 }
 
 #menuToggle span:first-child {
@@ -85,30 +77,31 @@ nav {
   transform-origin: 0% 100%;
 }
 
-#menuToggle input:checked ~ span {
+#menuToggle input:checked~span {
   opacity: 1;
   transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383f;
+  background: #fbfcff;
 }
 
-#menuToggle input:checked ~ span:nth-last-child(3) {
+#menuToggle input:checked~span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-#menuToggle input:checked ~ span:nth-last-child(2) {
+#menuToggle input:checked~span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
 #menu {
-  position: absolute;
-  width: 250px;
+  position: fixed;
+  width: 300px;
   height: 120vh;
-  box-shadow: 0 0 10px #85888c;
+  overflow-y: hidden !important;
   margin: -50px 0 0 -50px;
   padding: 50px;
+  padding-top: 100px;
   padding-top: 125px;
-  background-color: #f5f6fa;
+  background-color: #171717;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
@@ -116,11 +109,11 @@ nav {
 }
 
 #menu li {
-  padding: 10px 0;
+  padding: 16px 0;
   transition-delay: 2s;
 }
 
-#menuToggle input:checked ~ ul {
+#menuToggle input:checked~ul {
   transform: none;
 }
 
@@ -161,6 +154,7 @@ nav {
   margin-bottom: 5%;
   background-color: transparent;
 }
+
 .abt {
   margin-top: 50px;
 }
