--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -164,7 +164,7 @@ nav {
 }
 
 .background-xenith {
-  background: linear-gradient(to right, #6441A5, #2a0845);
+  background: linear-gradient(to right, #330092, #000b1e);
   transition: all 0.8s ease-in-out;
 }
 
