--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -1,3 +1,7 @@
+#gallery {
+    overflow: hidden;
+}
+
 .img-gal {
     width: 800px;
     height: 300px;
@@ -6,7 +10,7 @@
 
 @media only screen and (max-width: 800px) {
     .img-gal {
-        min-width: 90%;
+        width: 90%;
         height: 200px;
         object-fit: cover;
         margin: 0 60px;
