--- a/static/css/event.css
+++ b/static/css/event.css
@@ -112,6 +112,8 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: white;
   transform: rotateY(180deg);
+  overflow-y: scroll;
+  padding: 3%;
 }
 
 .flip-card-front-text {
