--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -9,5 +9,5 @@
 
 ::-webkit-scrollbar-thumb {
     padding: 10px;
-    background: linear-gradient(to bottom right, #2a0845, #6441A5);
+    background: linear-gradient(to bottom right, #13028f, #182e75);
 }
