--- a/static/css/style.css
+++ b/static/css/style.css
@@ -485,7 +485,7 @@ header{
   top: 0;
   left: 0;
   width: 100%;
-  padding: 15px 100px;
+  padding: 5px 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -493,14 +493,11 @@ header{
 }
 header .logo{
   color: #fff;
-  
   font-weight: 700;
   text-decoration: none;
   font-size: 2em;
   text-transform: uppercase;
   letter-spacing: 2px;
- 
-  
 }
 
 /* header ul{
