--- a/static/css/sponsor.css
+++ b/static/css/sponsor.css
@@ -12,7 +12,7 @@
   align-items: center;
   padding: 40px 0;
   flex-wrap: wrap;
-  border-radius: 10%;
+  border-radius: 5%;
 }
 .col-md-5 {
   height: calc(var(--size)*0.6);
@@ -28,7 +28,7 @@
   align-items: center;
   margin: 10px 20px;
   transition: 0.5s;
-  border-radius: 10%;
+  border-radius: 5%;
 }
 
 .sponsor-card .container:hover {
@@ -42,8 +42,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 10%;
-  background: linear-gradient(45deg, #7f2588, #0a165c);}
+  border-radius: 5%;
+  background: none;
+}
 
 .sponsor-card .container::after {
   content: "";
