--- a/static/css/events.css
+++ b/static/css/events.css
@@ -1,29 +1,8 @@
-#part
- {
-   width:100%;
-    height:auto;
-}
-.eventheading h1
-{
-color:white;
-text-align:center;
-font-family: 'Trebuchet MS', sans-serif;
-text-shadow: 0px 0px 4px #f5e23e;
-letter-spacing: 5px;
-}
-#EVENTS 
-{
-    display: flex;
-    background-color: #031625;
-}
+
 .tl-item:hover 
 {
         width: 30% !important;
 }
-#EVENTS:hover.tl-item 
-{
-     width: 23.3333%;
- }
 .tl-item:hover .eventname
 {
  display:none;
@@ -36,10 +15,10 @@ letter-spacing: 5px;
 }
 .tl-item 
 {
+    width:27%;
     z-index:9;
     position: relative;
-    width:20%;
-    height: 100%;
+    height: 360px;
     color: rgb(251, 246, 246);
     transition: width 0.5s ease;
 }
@@ -89,19 +68,20 @@ letter-spacing: 5px;
     opacity:1;
 }
 .register {
-    border-color: rgb(229, 234, 233);
-    border-radius:50px;
+    padding:3%;
+    border-radius:3px;
     transform: scale(1.2);
-    box-shadow: 0 0 15px rgb(243, 244, 237);
-    background-color: rgb(255, 255, 255);
-    color:rgb(0, 0, 7);
+    box-shadow: 0 0 20px rgb(7, 11, 0);
+    border-color: rgb(145, 253,0.4);
+    background-color:rgba(0, 0, 7, 0.567);
+    color:rgb(145, 253, 4);
 }
 
 .register:hover {
-    border-radius:50px;
-    background-color: rgb(5, 6, 42);
-    color: aqua;
-    border-color:rgb(1, 255, 255);
-    box-shadow: 0 0 20px rgb(0, 255, 255);
-    text-shadow: 0 0 50px rgb(5, 14, 14);
+    border-radius:10px;
+    box-shadow: 0 0 20px rgb(7, 11, 0);
+    border-color: rgb(253, 0, 186);
+    background-color:rgba(0, 0, 7, 0.567);
+    color:rgb(253, 0, 186);
+    text-shadow: 0 0 50px rgb(253, 0, 186);
 }
