--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Arvo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,600,700,900,500,800;1,900');@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&family=Montserrat&family=Sacramento&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,600,700,900,500,800;1,900');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&family=Montserrat&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap');
 
@@ -37,14 +38,17 @@
   font-family: Tigerious;
   src: url("../fonts/TigeriousItalic-9YyJn.otf");
 }
+
 @font-face {
   font-family: LoveAmourBlank;
   src: url("../fonts/LoveAmourBlank-ZVRpm.ttf");
 }
+
 @font-face {
   font-family: Logistra;
   src: url("../fonts/Logistra-0WJOR.ttf");
 }
+
 @font-face {
   font-family: realdelight;
   src: url("../fonts/RealDelight-6YwJA.ttf");
@@ -54,10 +58,12 @@
   font-family: drip;
   src: url("../fonts/DripOctober-vm0JA.ttf");
 }
+
 @font-face {
   font-family: Wynford;
   src: url("../fonts/WynfordObliqueLineAlt1-4Byx9.otf");
 }
+
 @font-face {
   font-family: Crota;
   src: url("../fonts/CrotahFreeVersionItalic-z8Ev3.ttf");
@@ -128,30 +134,30 @@ html {
 }
 
 .heading-title::before {
-  background-image: linear-gradient(
-    to right,
-    rgba(64, 37, 113, 1),
-    rgba(51, 32, 102, 1)
-  );
+  background-image: linear-gradient(to right,
+      rgba(64, 37, 113, 1),
+      rgba(51, 32, 102, 1));
   animation: animateTyping var(--typeSpeed) steps(var(--textLength)) forwards;
 }
+
 .text_1 {
   font-family: "Hyperhelix";
   position: relative;
   font-size: 1em;
   animation: text1;
 }
-.text_1{
+
+.text_1 {
   overflow: hidden;
   white-space: nowrap;
   display: inline-block;
   position: relative;
   animation-duration: 2s;
   animation-timing-function: steps(25, end);
-  animation-iteration-count:1;
+  animation-iteration-count: 1;
 }
 
-.text_1::after{
+.text_1::after {
   content: "|";
   position: absolute;
   right: 0;
@@ -162,63 +168,71 @@ html {
 
 
 @keyframes text1 {
-from {
-					width:0px;
-				}
+  from {
+    width: 0px;
+  }
 
-				to {
-					width:35vw;
-				}
+  to {
+    width: 35vw;
+  }
 }
-@media  screen and (max-width:700px) {
+
+@media screen and (max-width:700px) {
   @keyframes text1 {
     from {
-              width:0px;
-            }
-    
-            to {
-              width:70vw;
-            }
+      width: 0px;
     }
-  
+
+    to {
+      width: 70vw;
+    }
+  }
+
 }
-@media  screen and (max-width:400px) {
-  .text_1{
+
+@media screen and (max-width:400px) {
+  .text_1 {
     overflow: hidden;
     white-space: nowrap;
     display: inline-block;
     position: relative;
     animation-duration: 4s;
     animation-timing-function: steps(25, end);
-    animation-iteration-count:1;
+    animation-iteration-count: 1;
   }
+
   @keyframes text1 {
     from {
-              width:0px;
-            }
-    
-            to {
-              width:80vw;
-            }
+      width: 0px;
     }
-  
+
+    to {
+      width: 80vw;
+    }
+  }
+
 }
-@media  screen and (max-width:350px) {
+
+@media screen and (max-width:350px) {
   @keyframes text1 {
     from {
-              width:0px;
-            }
-    
-            to {
-              width:90vw;
-            }
+      width: 0px;
     }
-  
+
+    to {
+      width: 90vw;
+    }
+  }
+
 }
+
 @keyframes caret {
-  0%, 100% {
+
+  0%,
+  100% {
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
@@ -272,7 +286,7 @@ from {
   #event {
     height: 150vh;
     overflow: hidden;
-    
+
     padding: 5%;
   }
 
@@ -282,7 +296,7 @@ from {
   }
 
   #team {
-    max-height: 310vh;
+
     overflow: hidden;
     padding: 5%;
   }
@@ -297,7 +311,6 @@ from {
   }
 
   #team {
-    max-height: 570vh;
     overflow: hidden;
     padding: 5%;
   }
@@ -324,7 +337,8 @@ main {
   margin: auto;
   overflow: visible;
 }
-.content1{
+
+.content1 {
   font-family: "Tigerious";
 
   margin: 0;
@@ -334,55 +348,57 @@ main {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  
 
 
-    position: relative;
+
+  position: relative;
 }
 
-.content1 h2{
-    position: absolute;
-   
-    color: #fff;
-    transform: translate(-50%, -50%);
-    font-size: 100px;
-    -webkit-box-reflect: below 1px linear-gradient(transparent,#0004);
-    font-family: "drip";
-  }
-  .preLoader{
-   padding-right: 500px;
-   margin-right: 200px;
-  }
-
-
-.content1 h2:nth-child(1){
-    color: #fff;
-    -webkit-text-stroke:2px #0A2647;
+.content1 h2 {
+  position: absolute;
+  color: #fff;
+  font-size: 18vmin;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+  font-family: "drip";
 }
 
-.content1 h2:nth-child(2){
-    color: #81C6E8;
-    animation: animate123 4s ease-in-out infinite;
+.preLoader {
+  padding-right: 500px;
+  margin-right: 200px;
 }
-.textcheck{
+
+
+.content1 h2:nth-child(1) {
+  color: #fff;
+  -webkit-text-stroke: 2px #0A2647;
+}
+
+.content1 h2:nth-child(2) {
+  color: #81C6E8;
+  animation: animate123 4s ease-in-out infinite;
+}
+
+.textcheck {
   padding-bottom: 20px;
- 
+
 }
-.uk-position-center{
+
+/* .uk-position-center{
   padding-left: 20px;
   margin-left: 250px;
   margin-top:80px ;
-}
+} */
 
-@keyframes animate123{
-    0%,
-    100% {
-        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
-    }
+@keyframes animate123 {
 
-    50% {
-        clip-path: polygon(0 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
-    }
+  0%,
+  100% {
+    clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+  }
+
+  50% {
+    clip-path: polygon(0 60%, 16% 65%, 34% 66%, 51% 62%, 67% 50%, 84% 45%, 100% 46%, 100% 100%, 0% 100%);
+  }
 }
 
 /*****/
@@ -425,8 +441,7 @@ main {
 
 
 } */
-.content2
-{
+.content2 {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
@@ -435,42 +450,43 @@ main {
   align-items: center;
   min-height: 100vh;
 }
+
 .content2 h1 {
   padding-top: 160px;
   padding-top: 400px;
-
-  font-size: 1.5em;
-  font-size: 2.5em;
-
+  font-size: 2.7em;
+  text-align: center;
   color: #7DE5ED;
   font-weight: 500;
   letter-spacing: 5px;
   cursor: pointer;
   font-family: "LoveAmourBlank";
-  -webkit-text-stroke:1px #0A2647;
+  -webkit-text-stroke: 1px #0A2647;
 
 
-  }
-  .content2 h1 span
-  {
-   transition: 0.5s;
+}
 
-  }
-  .content2 h1:hover span:nth-child(1)
-  {
-    margin-right: 10px;
+.content2 h1 span {
+  transition: 0.5s;
 
-  }
-  .content2 h1:hover span:nth-child(1)::after{
-    content: "";
-  }
-  .content2 h1:hover span:nth-child(2)
-  {
-    margin-left: 30px;
-  }
-  .content2 h1:hover span {
-    color: #fff;
-    text-shadow: 0 0 10px #fff,
+}
+
+.content2 h1:hover span:nth-child(1) {
+  margin-right: 10px;
+
+}
+
+.content2 h1:hover span:nth-child(1)::after {
+  content: "";
+}
+
+.content2 h1:hover span:nth-child(2) {
+  margin-left: 30px;
+}
+
+.content2 h1:hover span {
+  color: #fff;
+  text-shadow: 0 0 10px #fff,
     0 0 20px #fff,
     0 0 40px #fff,
     0 0 80px #fff,
@@ -478,9 +494,10 @@ main {
     0 0 160px #fff,
 
 
-  }
+}
+
 /* navbar */
-header{
+header {
   position: absolute;
   top: 0;
   left: 0;
@@ -489,9 +506,10 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+
 }
-header .logo{
+
+header .logo {
   color: #fff;
   font-weight: 700;
   text-decoration: none;
@@ -531,16 +549,16 @@ header ul li a:hover,.active{
 
 } */
 
-#aboutit
-{
-  font-family:"Crota";
-} 
-@media(max-width: 768px)
-{
-  .textcheck2{
+#aboutit {
+  font-family: "Crota";
+}
+
+@media(max-width: 768px) {
+  .textcheck2 {
     font-size: 2px;
   }
-  .textcheck{
+
+  .textcheck {
     font-size: 2px;
   }
 }
