--- a/static/css/events.css
+++ b/static/css/events.css
@@ -1,4 +1,4 @@
-
+/* 
 .tl-item:hover 
 {
         width: 30% !important;
@@ -84,4 +84,193 @@
     background-color:rgba(0, 0, 7, 0.567);
     color:rgb(253, 0, 186);
     text-shadow: 0 0 50px rgb(253, 0, 186);
+} */
+
+/* 222222 */
+
+/* 
+*
+{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: "Popins";
+
+}
+.bodyset{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-wrap: wrap;
+    background: transparent;
+}
+.box
+{
+    position: relative;
+     width: 300px;
+     height: 400px;
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  
+    margin: 40px;
+}
+.box .glass
+{
+position: absolute;
+top: 0%;
+left: 0%;
+width: 50%;
+height: 100%;
+display: block;
+background: rgba(255,255,255,.1);
+pointer-events: none;
+
+}
+.titlevent
+{
+    color: #fff;
+}
+.box .content
+{
+    padding: 20px;
+    color: #fff;
+}
+.box:before
+{
+    content: ' ';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background:#fff;
+    z-index: -1;
+     
+} */
+
+/* 33333 */
+
+*
+{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+
+}
+.event-final
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background:transparent;
+
+}
+.containerevent
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    flex-wrap: wrap;
+    padding: 40px 0%;
+}
+.containerevent .card
+{
+    position: relative;
+    width: 320px;
+    height: 440px;
+    box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05),
+                inset -5px -5px 5px rgba(255,255,255,0.5),
+                5px 5px 5px rgba(0,0, 0,0.05),
+                -5px -5px 5px rgba(255,255,255,0.5);
+    border-radius: 15px;
+    margin: 30px;
+
+}
+
+.containerevent .card .box
+{
+    position: absolute;
+    background-image:url("../img/events/metaverse.png");
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+}
+.containerevent .card .box .content12{
+    padding: 20px;
+    text-align:center;
+}
+.containerevent .card .box .content12 h2{
+    position: absolute;
+    
+    
+    top: -10px;
+    right: 30px;
+    font-size: 8em;
+    color: rgba(0,0, 0,0.02);
+    transition: 0.5s;
+    pointer-events: none;
+}
+.containerevent .card:hover .box .content12 h2
+{
+    color: rgba(0,0, 0,0.05);
+
+}
+.containerevent .card .box .content12 h3
+{
+    font-size: 1.8em;
+    color: #777;
+    z-index: -1;
+    transition: 0.5s;
+
+}
+.containerevent .card .box .content12 p{
+    font-size: 1em;
+    font-weight: 300;
+    color: #777;
+    z-index: 1;
+    transition: 0.5s;
+}
+.containerevent .card .box .content12 a
+{
+    position: relative;
+    display: inline-block;
+    padding: 8px 20px;
+    background: #03a9f4;
+    margin-top: 15px;
+    border-radius: 20px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 400;
+    box-shadow: 0 10px 20px rgba(0,0, 0,0.2); 
+}
+.containerevent .card:hover .box .content12 a
+{
+    background: #ff568f;
+
+}
+.containerevent .card:hover .box
+{
+    transform: translateY(-50px);
+    box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
+    background: linear-gradient(45deg, #b95ce4,#4f29cd);
+
+}
+.containerevent .card:hover .box .content12 h3,
+.containerevent .card:hover .box .content12 p
+{
+    
+    color: #fff;
+
 }
