Landing page updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,10 @@
   --card-height: 65vh;
   --card-width: calc(var(--card-height) / 1.5);
 }
-
+body
+{
+    overflow-x: hidden !important;
+}
 *:focus {
   outline: none !important;
 }
