--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@500&display=swap');
 
-/* Footer Animations and Waves */
+/* Footer Animations and wves */
 #contact {
   position: absolute;
   bottom: -50px;
@@ -73,7 +73,7 @@
   font-weight: 300;
 }
 
-.wave {
+.wve {
   position: absolute;
   top: -100px;
   left: 0;
@@ -84,35 +84,35 @@
   background-size: 1000px 100px;
 }
 
-.wave#wave1 {
+.wve#wve1 {
   z-index: 10;
   opacity: 1;
   bottom: 0;
-  animation: animateWaves 4s linear infinite;
+  animation: animatewves 4s linear infinite;
 }
 
-.wave#wave2 {
+.wve#wve2 {
   z-index: 10;
   opacity: 0.5;
   bottom: 10px;
   animation: animate 4s linear infinite !important;
 }
 
-.wave#wave3 {
+.wve#wve3 {
   z-index: 10;
   opacity: 0.2;
   bottom: 15px;
-  animation: animateWaves 3s linear infinite;
+  animation: animatewves 3s linear infinite;
 }
 
-.wave#wave4 {
+.wve#wve4 {
   z-index: 10;
   opacity: 0.7;
   bottom: 20px;
   animation: animate 3s linear infinite;
 }
 
-@keyframes animateWaves {
+@keyframes animatewves {
   0% {
     background-position-x: 1000px;
   }
