--- a/static/css/style.css
+++ b/static/css/style.css
@@ -365,10 +365,10 @@ main {
   font-family: "drip";
 }
 
-.preLoader {
+/* .preLoader {
   padding-right: 500px;
   margin-right: 200px;
-}
+} */
 
 
 .content1 h2:nth-child(1) {
@@ -570,4 +570,231 @@ header ul li a:hover,.active{
     font-size: 2px;
    
   }
+}
+.dolphin {
+  position: relative;
+  color: #fff;
+  font-size: 15px;
+  width: 50vmin;
+  height: 50vmin;
+  margin: 1.5% auto 0;
+  animation: rotatatingDelphin 2000ms ease-in-out 700ms infinite;
+}
+.line {
+  position: absolute;
+  width: 8px;
+  height: 8%;
+  border-radius: 5.7142857143px;
+  background: linear-gradient(90deg, #0e5da6 10%, #89fae3 50%, #0e5da6 100%);
+  box-shadow: 0 0 6px #1b2cff;
+}
+.line:nth-child(even) {
+  animation: movingUp 500ms linear;
+  animation-fill-mode: forwards;
+}
+.line:nth-child(odd) {
+  animation: movingDown 500ms linear;
+  animation-fill-mode: forwards;
+}
+.line__size1 {
+  top: 80%;
+  left: 0.6%;
+  height: 8%;
+}
+.line__size2 {
+  top: 74%;
+  left: 5%;
+  height: 11%;
+}
+.line__size3 {
+  top: 73%;
+  left: 9.8%;
+  height: 13%;
+}
+.line__size4 {
+  top: 52%;
+  left: 14.5%;
+  height: 34%;
+}
+.line__size5 {
+  top: 73%;
+  left: 19%;
+  height: 13%;
+}
+.line__size6 {
+  top: 74%;
+  left: 23.5%;
+  height: 11%;
+}
+.line__size7 {
+  top: 80%;
+  left: 28.2%;
+  height: 8%;
+}
+.line__size8 {
+  top: 42%;
+  left: 19%;
+  height: 28%;
+}
+.line__size9 {
+  top: 35.5%;
+  left: 23.5%;
+  height: 25%;
+}
+.line__size10 {
+  top: 32%;
+  left: 28%;
+  height: 24%;
+}
+.line__size11 {
+  top: 23%;
+  left: 33%;
+  height: 28%;
+}
+.line__size12 {
+  top: 13%;
+  left: 33%;
+  height: 8%;
+}
+.line__size13 {
+  top: 13%;
+  left: 37.5%;
+  height: 36%;
+}
+.line__size14 {
+  top: 14%;
+  left: 42%;
+  height: 33%;
+}
+.line__size15 {
+  top: 18%;
+  left: 46.5%;
+  height: 28%;
+}
+.line__size16 {
+  top: 48%;
+  left: 46.5%;
+  height: 5%;
+}
+.line__size17 {
+  top: 21%;
+  left: 51%;
+  height: 24%;
+}
+.line__size18 {
+  top: 47%;
+  left: 51%;
+  height: 8%;
+}
+.line__size19 {
+  top: 20%;
+  left: 55.5%;
+  height: 35%;
+}
+.line__size20 {
+  top: 20%;
+  left: 60%;
+  height: 32%;
+}
+.line__size21 {
+  top: 20.5%;
+  left: 65%;
+  height: 25%;
+}
+.line__size22 {
+  top: 21%;
+  left: 69.5%;
+  height: 22%;
+}
+.line__size23 {
+  top: 22%;
+  left: 74%;
+  height: 22%;
+}
+.line__size24 {
+  top: 25%;
+  left: 79%;
+  height: 21%;
+}
+.line__size25 {
+  top: 28%;
+  left: 83.5%;
+  height: 19%;
+}
+.line__size26 {
+  top: 31%;
+  left: 88%;
+  height: 19%;
+}
+.line__size27 {
+  top: 35%;
+  left: 92.5%;
+  height: 16%;
+}
+.line__size28 {
+  top: 46%;
+  left: 97%;
+  height: 6%;
+}
+@keyframes movingUp {
+  0% {
+    top: -100%;
+ }
+}
+@keyframes movingDown {
+  0% {
+    top: 200%;
+ }
+}
+@keyframes rotatatingDelphin {
+  0% {
+    transform: rotate(0deg);
+ }
+  80%, 100% {
+    transform: rotate(360deg);
+ }
+}
+.textBlock {
+  position: relative;
+  width: 400px;
+  margin: 1% auto 0;
+  text-align: center;
+  animation: showInvisible 700ms linear;
+  animation-fill-mode: forwards;
+}
+@keyframes showInvisible {
+  0% {
+    opacity: 0;
+ }
+  100% {
+    opacity: 1;
+ }
+}
+.dolphinText {
+  display: inline-block;
+  text-decoration: underline;
+  color: #fff;
+  font-size: 2em;
+  font-family: 'Shrikhand', cursive;
+}
+.dot {
+  display: inline-block;
+  transform: translateY(80%);
+  width: 5.3333333333px;
+  height: 5.3333333333px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0;
+}
+.dot:nth-child(1) {
+  animation: showInvisible 500ms linear 1000ms infinite alternate;
+}
+.dot:nth-child(2) {
+  animation: showInvisible 500ms linear 1300ms infinite alternate;
+}
+.dot:nth-child(3) {
+  animation: showInvisible 500ms linear 1600ms infinite alternate;
+}
+.dot:nth-child(4) {
+  animation: showInvisible 500ms linear 1900ms infinite alternate;
 }
