--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -22,6 +22,7 @@
   font-family: 'Domine', serif;
   font-size: 20px;
   margin-top: 500px;
+  justify-content: space-between;
 }
 
 .social-icon,
@@ -71,65 +72,6 @@
   margin: 15px 0 10px 0;
   font-size: 1rem;
   font-weight: 300;
-}
-
-.wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url("../img/wave.png");
-  /*add css/wave.png instead*/
-  background-size: 1000px 100px;
-}
-
-.wave#wave1 {
-  z-index: 10;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWaves 4s linear infinite;
-}
-
-.wave#wave2 {
-  z-index: 10;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
-}
-
-.wave#wave3 {
-  z-index: 10;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
-}
-
-.wave#wave4 {
-  z-index: 10;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
-}
-
-@keyframes animateWaves {
-  0% {
-    background-position-x: 1000px;
-  }
-
-  100% {
-    background-positon-x: 0px;
-  }
-}
-
-@keyframes animate {
-  0% {
-    background-position-x: -1000px;
-  }
-
-  100% {
-    background-positon-x: 0px;
-  }
 }
 
 section {
