--- a/static/css/style.css
+++ b/static/css/style.css
@@ -459,9 +459,9 @@ main {
 }
 
 .content2 h1 {
-  padding-top: 160px;
-  padding-top: 400px;
-  font-size: 2.7em;
+  padding-top: 5vw;
+  /* padding-top: 400px; */
+  font-size: 3em;
   text-align: center;
   color: #7DE5ED;
   font-weight: 500;
