--- a/static/css/team.css
+++ b/static/css/team.css
@@ -205,3 +205,73 @@
 .container:hover .middle {
   opacity: 1;
 }
+
+/*new css*/
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.cont{
+  min-height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin: 10px;
+  border-radius: 15px;
+ 
+}
+.profile_container{
+  aspect-ratio: 1/1;
+  width: min(400px,90%);
+  position: relative;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
+}
+.back{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 10px 10px 0  #3b1cc2 , -10px -10px 0  #795dc5;
+  border-radius: 50%;
+  animation: rotate 4s infinite linear;
+}
+.profile{
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+  background-position: center;
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  
+}
+.name{
+color: #ececec;
+font-size: 26px;
+}
+.occupation{
+color: #ececec;
+font-size: 18px;
+}
+.profile:hover{
+  background-size: 110%;
+  box-shadow: 10px 10px 0  #8d08d0 , -10px -10px 0  #260071;
+}
+.profile_infos{
+  text-align: center;
+}
+@keyframes rotate {
+  to{
+    transform: rotate(360deg);
+  }
+}
