--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,9 +29,18 @@
   --card-height: 65vh;
   --card-width: calc(var(--card-height) / 1.5);
 }
+#scroll
+{
+  height:100vh;
+  width:100vw;
+  position: absolute;
+  z-index: 15 !important;
+}
 body
 {
     overflow-x: hidden !important;
+    
+    
 }
 *:focus {
   outline: none !important;
