--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,10 +512,11 @@ main {
 
 }
 
+
 /* navbar */
 header {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
   width: 100%;
   padding: 5px 10%;
