--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -107,11 +107,10 @@
 @media screen and (max-width: 900px){
     .timeline ul li div{
         width: 250px;
-
     }
     .timeline ul li div div{
         width: 60%;
-        margin: 10px;
+        margin: auto;
     }
     .timeline ul li:nth-of-type(even) > div{
         left: -289px;
