--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -472,7 +472,7 @@ section {
   margin-top: 15px;
 }
 
-.name {
+.nme {
   margin-bottom: 25px;
 }
 
@@ -554,7 +554,7 @@ section {
   flex-direction: flex-row;
 }
 
-.name {
+.nme {
   margin-left: auto;
   margin-right: auto;
 }
