--- a/static/css/team.css
+++ b/static/css/team.css
@@ -231,11 +231,12 @@ body
   flex-wrap: wrap;
   margin: 10px;
   border-radius: 15px;
+  flex-direction: column;
  
 }
 .profile_container{
   aspect-ratio: 1/1;
-  width: min(400px,90%);
+  width: 200px;
   position: relative;
   margin-left: 50px;
   margin-right: 50px;
@@ -254,7 +255,7 @@ body
   width: 100%;
   height: 100%;
   background-size: 100%;
-  background-position: center;
+  background-position: cover;
   transition: all 0.2s ease-in-out;
   position: absolute;
   
