--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -762,7 +762,7 @@ a {
 .scene,
 .layer {
     display: block;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     padding: 0;
     margin: 0;
