--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -321,7 +321,7 @@ a {
 }
 
 .wrapper {
-    min-height: 460px;
+    min-height:100vh;
     position: absolute;
     overflow: hidden;
     display: table;
@@ -762,14 +762,14 @@ a {
 .scene,
 .layer {
     display: block;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
 }
 
 .scene {
-    min-height: 460px;
+    min-height: 100vh;
     position: relative;
     overflow: hidden;
 }
@@ -1375,7 +1375,7 @@ a {
         font-size: 12px;
     }
     .wrapper {
-        min-height: 360px;
+        min-height: 100vh;
     }
     .about .panel header:before {
         background-size: 66px 90px;
@@ -1387,7 +1387,7 @@ a {
         width: 80px;
     }
     .scene {
-        min-height: 360px;
+        min-height: 100vh;
     }
     .rope.depth-10 {
         top: 10%;
