event mobile function fix

--- a/static/css/events.css
+++ b/static/css/events.css
@@ -56,7 +56,9 @@
     text-align:center;
     opacity: 0;
 }
-.containerevent .card:hover .box .content12{
+.containerevent .card:hover .box .content12,
+.containerevent .card:active .box .content12
+{
     padding: 20px;
     text-align:center;
     opacity: 1;
@@ -72,7 +74,8 @@
     transition: 0.5s;
     pointer-events: none;
 }
-.containerevent .card:hover .box .content12 h2
+.containerevent .card:hover .box .content12 h2,
+.containerevent .card:active .box .content12 h2
 {
     color: rgba(0,0, 0,0.05);
 
@@ -105,12 +108,14 @@
     font-weight: 400;
     box-shadow: 0 10px 20px rgba(0,0, 0,0.2); 
 }
-.containerevent .card:hover .box .content12 a
+.containerevent .card:hover .box .content12 a,
+.containerevent .card:active .box .content12 a
 {
     background: #ff568f;
 
 }
-.containerevent .card:hover .box
+.containerevent .card:hover .box,
+.containerevent .card:active .box
 {
     transform: translateY(-50px);
     opacity: 1;
@@ -119,7 +124,9 @@
 
 }
 .containerevent .card:hover .box .content12 h3,
-.containerevent .card:hover .box .content12 p
+.containerevent .card:hover .box .content12 p,
+.containerevent .card:active .box .content12 h3,
+.containerevent .card:active .box .content12 p
 {
     
     color: #fff;
